fixed result text alignment

--- a/src/assets/styles/results.css
+++ b/src/assets/styles/results.css
@@ -140,4 +140,8 @@ footer li:last-child {
     #results img  {
         display: none;
     }
+
+    .title {
+        text-align: left;
+    }
 }
